# Hackathon-Innovation-Challenge-2026

./: .env.example  .gitignore  LICENSE  Makefile  README.es.md  README.md  TODO.md  main.py  pyproject.toml
AccesAI_extension/: index.html  main-ZE56QQHU.js  manifest.json  styles-TC24CBNY.css
src/: main.py  minimalist_example.py
src/api/: compatibility.py  routes.py
src/core/: config.py  kernel_client.py
src/models/: schemas.py
src/ui/: app.py
test/: test_kernel.py
web_ui/: index.html
