[project]
name = "hackathon-innovation-challenge-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "fastapi[standard]>=0.135.1",
    "pdoc>=16.0.0",
    "streamlit>=1.55.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
    "pdoc>=16.0.0",
]

[tool.pdoc]
output-dir = "docs"
